--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,27 @@
     	<version>1.2.2.RELEASE</version>
     </parent>
 
+    <properties>
+        <jena.version>2.10.0-SNAPSHOT</jena.version>
+        <arq.version>2.10.0-SNAPSHOT</arq.version>
+        <tdb.version>0.10.0-SNAPSHOT</tdb.version>
+        <larq.version>1.0.1-SNAPSHOT</larq.version>
+        <iri.version>0.9.5-SNAPSHOT</iri.version>
+        <java-rdfa.version>0.4.2-RC2</java-rdfa.version>
+        <jena-jung.version>0.1.1</jena-jung.version>
+        <clerezza-rdf.jena.serializer.version>0.10-incubating-SNAPSHOT</clerezza-rdf.jena.serializer.version>
+        <clerezza-rdf.jena.parser.version>0.11-incubating-SNAPSHOT</clerezza-rdf.jena.parser.version>
+        <clerezza-rdf.jena.commons.version>0.6-incubating-SNAPSHOT</clerezza-rdf.jena.commons.version>
+        <slf4j.version>1.6.4</slf4j.version>
+        <log4j.version>1.2.16</log4j.version>
+        <jruby.version>1.6.5</jruby.version>
+        <scala.version>2.9.1</scala.version>
+        <poi.version>3.8-beta5</poi.version>
+        <junit.version>4.11</junit.version>
+        <jdk.version>1.6</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
     	<dependency>
     		<groupId>org.springframework.boot</groupId>
