--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
         <version>${jruby.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>${scala.version}</version>
+      </dependency>
+
     </dependencies>
 
     <build>
