--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		 classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.2.RELEASE")
-    }
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.2.RELEASE")
+		classpath("net.saliman:gradle-cobertura-plugin:2.2.7")		
+		classpath("org.codehaus.groovy:groovy-backports-compat23:2.3.5")
+	}
 }
 
 apply plugin: 'java'
@@ -12,6 +14,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'maven'
+apply plugin: 'net.saliman.cobertura'
 
 bootRepackage {
 	mainClass = 'jena.Application'
