--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ repositories {
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
-	compile("org.apache.jena:jena:2.11.1")
-	compile("org.apache.jena:jena-arq:2.11.1")
+	compile("org.apache.jena:jena:2.12.0")
+	compile("org.apache.jena:jena-core:2.12.0")
+	compile("org.apache.jena:jena-arq:2.12.0")
 	testCompile("junit:junit")
 }
 
